<resources>
    <string name="app_name">Gestão Obra</string>
    <string name="generic_save">Salvar</string>
    <string name="generic_update">Atualizar</string>
    <string name="generic_add">Adicionar</string>
    <string name="generic_cancel">Cancelar</string>
    <string name="generic_back">Voltar</string>
    <string name="generic_ok">OK</string>
    <string name="generic_yes">Sim</string>
    <string name="generic_no">Não</string>
    <string name="generic_continue">Continuar</string>
    <string name="generic_new">Nova</string>
    <string name="generic_loading">Carregando…</string>
    <string name="generic_copy">Copiar</string>
    <string name="error_no_internet">Você está sem conexão à internet.</string>
    <string name="menu_title">Menu</string>
    <string name="unsaved_confirm_msg">Nenhuma alteração será salva. Quer mesmo retornar?</string>
    <string name="loading">Carregando</string>
    <string name="scroll_to_bottom">Rolar para o final</string>
    <string name="cd_toggle_password_visibility">Mostrar ou ocultar senha</string>
    <string name="cd_login_illustration">Ilustração de login</string>
    <string name="snack_attention">Atenção</string>
    <string name="snack_error">Erro</string>
    <string name="snack_success">Sucesso</string>
    <string name="snack_warning">Aviso</string>
    <string name="snack_title">Aviso</string>
    <string name="snack_button_ok">OK</string>
    <string name="snack_button_yes">SIM</string>
    <string name="snack_button_no">NÃO</string>
    <string name="login_title">Entrar</string>
    <string name="login_email_hint">E‑mail</string>
    <string name="login_email_error">E‑mail inválido.</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_password_error">Senha deve ter ao menos 6 caracteres.</string>
    <string name="login_button">Entrar</string>
    <string name="login_create_account">Criar conta</string>
    <string name="login_forgot_password">Recuperar senha</string>
    <string name="login_toast_success">Usuário logado.</string>
    <string name="login_error_user_not_found">Usuário não encontrado.</string>
    <string name="login_error_wrong_password">Senha incorreta.</string>
    <string name="login_error_generic">Falha ao logar. Tente novamente.</string>
    <string name="register_title">Registrar Conta</string>
    <string name="register_name_hint">Nome</string>
    <string name="register_email_hint">E‑mail</string>
    <string name="register_password_hint">Senha</string>
    <string name="register_button">Cadastrar</string>
    <string name="register_toast_success">Usuário criado.</string>
    <string name="register_email_in_use_error">E-mail já cadastrado. Faça login ou recupere sua senha.</string>
    <string name="register_name_error">Nome deve ter ao menos 3 caracteres.</string>
    <string name="register_email_error">E-mail inválido.</string>
    <string name="register_password_error">Senha deve ter ao menos 6 caracteres.</string>
    <string name="register_error_generic">Falha ao criar a conta. Tente novamente.</string>
    <string name="reset_title">Recuperar Conta</string>
    <string name="reset_email_hint">E‑mail</string>
    <string name="reset_button">Enviar</string>
    <string name="reset_toast_success">Verifique seu e‑mail cadastrado.</string>
    <string name="reset_error_email_not_found">E‑mail não encontrado.</string>
    <string name="reset_password_email_error">E-mail inválido.</string>
    <string name="reset_password_error_generic">
        Falha ao enviar e-mail de redefinição. Tente novamente.
    </string>
    <string name="work_title">Obras</string>
    <string name="work_no_items">Sem obras cadastradas.</string>
    <string name="work_select_prompt">Selecione a Obra</string>
    <string name="work_new_button">Nova Obra</string>
    <string name="work_dropdown_hint">Obras Cadastradas</string>
    <string name="work_toast_selected">Obra %1$s selecionada.</string>
    <string name="work_toast_saved">Informações da obra salvas.</string>
    <string name="work_load_error">
        Não foi possível carregar as obras. Verifique sua conexão.
    </string>
    <string name="work_error_save">Erro ao salvar obra. Verifique sua conexão.</string>
    <string name="work_error_nome">Nome deve ter pelo menos 3 caracteres.</string>
    <string name="work_error_endereco">Informe o endereço da obra.</string>
    <string name="work_error_desc">Informe a descrição da obra.</string>
    <string name="work_error_saldo">Valor de saldo inválido.</string>
    <string name="work_error_data_inicio">Informe uma data de início.</string>
    <string name="work_error_data_fim">Informe uma data de término.</string>
    <string name="work_create_error">
        Falha ao salvar a obra. Tente novamente mais tarde.
    </string>
    <string name="work_error_date_order">Data de término deve ser igual ou posterior à data de início.</string>
    <string name="work_error_contato">Informe um telefone.</string>
    <string name="obra_data_contact_hint">Contato</string>
    <string name="work_error_saldo_format">Formato inválido. Use "20.500,00".</string>
    <string name="home_toolbar_title">Obra: %1$s</string>
    <string name="home_toolbar_edit">Editar Dados da Obra</string>
    <string name="home_logout">Sair</string>
    <string name="home_toast_logout">Usuário deslogado.</string>
    <string name="home_btn_funcionarios">Funcionários</string>
    <string name="home_btn_notas">Notas de Materiais</string>
    <string name="home_btn_notas2">Notas</string>
    <string name="home_btn_cronograma">Cronograma</string>
    <string name="home_btn_dados_obra">Dados da Obra</string>
    <string name="home_btn_resumo">Resumo</string>
    <string name="home_btn_fotos">Fotos da Obra</string>
    <string name="home_fotos_not_impl">Funcionalidade ainda não implementada.</string>
    <string name="home_error_missing_obra">Obra não encontrada.</string>
    <string name="home_error_load">Não foi possível carregar os dados da obra. Tente novamente.</string>
    <string name="home_logout_confirm_msg">Deseja sair da conta?</string>
    <string name="home_logout_confirm_action">Sair</string>
    <string name="home_btn_materiais">Materiais</string>
    <string name="home_btn_change_work">Trocar de Obra</string>
    <string name="home_change_work_confirm_msg">Deseja voltar ao menu com a lista de obras?</string>
    <string name="home_sub_cron">Planejar e acompanhar etapas</string>
    <string name="home_sub_ia">Soluções com IA</string>
    <string name="home_sub_fotos">Registrar andamento com imagens</string>
    <string name="home_sub_notas">Gerir notas e comprovantes</string>
    <string name="home_sub_materiais">Cadastrar e controlar materiais</string>
    <string name="home_sub_func">Cadastrar e gerenciar equipe</string>
    <string name="home_sub_dados">Informações e ajustes do projeto</string>
    <string name="home_sub_resumo">Tudo da obra num só lugar</string>
    <string name="home_sub_level">Ferramentas de nível/inclinação</string>
    <string name="home_sub_trocar">Voltar à seleção de obras</string>
    <string name="notas_register_quick">Nova Nota</string>
    <string name="imagens_add_photo">Adicionar Foto</string>
    <string name="home_progress_fmt">%1$d%% concluído</string>
    <string name="cd_section_icon">Ícone da seção</string>
    <string name="cd_navigate">Ir para a seção</string>
    <string name="search">Buscar</string>
    <string name="search_title">Buscar na obra</string>
    <string name="search_min_char_3">Digite ao menos 3 caracteres.</string>
    <string name="search_result_title">Resultado da Pesquisa</string>
    <string name="search_results_subtitle">Resultados da busca: %1$s</string>
    <string name="search_empty">Não foi encontrado nenhum item com esta(s) palavra(s).</string>
    <string name="search_section_cronograma">Cronograma</string>
    <string name="search_section_funcionario">Funcionário</string>
    <string name="search_section_material">Material</string>
    <string name="search_section_nota">Nota</string>
    <plurals name="search_total_elements">
        <item quantity="one">Total de elementos encontrados: %1$d elemento.</item>
        <item quantity="other">Total de elementos encontrados: %1$d elementos.</item>
    </plurals>
    <string name="func_title">Funcionários</string>
    <string name="func_no_items">Sem funcionários cadastrados.</string>
    <string name="func_tab_all">Todos</string>
    <string name="func_tab_active">Ativos</string>
    <string name="func_tab_inactive">Inativos</string>
    <string name="func_menu_summary">Resumo</string>
    <string name="func_snack_delete_msg">Tem certeza que deseja excluir o funcionário %1$s? Todos os dados e gastos relacionados serão removidos do resumo da obra.</string>
    <string name="func_toast_removed">Funcionário %1$s removido com sucesso.</string>
    <string name="func_toast_added">Funcionário adicionado.</string>
    <string name="func_toast_updated">Dados do funcionário atualizados.</string>
    <string name="func_load_error">Não foi possível carregar funcionários.</string>
    <string name="func_list_salary_format">%1$s (%2$s)</string>
    <string name="func_save_error">Erro ao salvar funcionário. Verifique sua conexão.</string>
    <string name="func_update_error">Erro ao atualizar funcionário. Verifique sua conexão.</string>
    <string name="func_delete_error">Erro ao excluir funcionário. Verifique sua conexão.</string>
    <string name="func_payment_add_error">Erro ao adicionar pagamento. Verifique sua conexão.</string>
    <string name="func_payment_update_error">Erro ao atualizar pagamento. Verifique sua conexão.</string>
    <string name="func_payment_delete_error">Erro ao excluir pagamento. Verifique sua conexão.</string>
    <string name="func_dias_trabalhados_singular">%1$d dia trabalhado</string>
    <string name="func_dias_trabalhados_plural">%1$d dias trabalhados</string>
    <string name="func_label_funcao">Função:</string>
    <string name="func_label_funcoes">Funções:</string>
    <string name="generic_edit">Editar</string>
    <string name="cron_tab_pending">Pendente</string>
    <string name="cron_tab_progress">Andamento</string>
    <string name="cron_tab_done">Concluído</string>
    <string name="cron_reg_button_save">Adicionar cronograma</string>
    <string name="etapa_reg_title">Cadastro de Etapa</string>
    <string name="etapa_reg_name_hint">Título da Etapa</string>
    <string name="etapa_reg_desc_hint">Descrição (opcional)</string>
    <string name="etapa_reg_employee_hint">Funcionário(s) (opcional)</string>
    <string name="etapa_reg_date_start_hint">Data para Início</string>
    <string name="etapa_reg_date_end_hint">Data para Término</string>
    <string name="etapa_reg_status">Status</string>
    <string name="etapa_reg_employee_helper">Separe os nomes com vírgula (,).</string>
    <string name="cron_reg_desc_hint">Descrição</string>
    <string name="cron_reg_func_hint">Funcionário(s)</string>
    <string name="imagens_filter_all">Todas</string>
    <string name="imagens_filter_name">Nome</string>
    <string name="imagens_filter_pintura">Pintura</string>
    <string name="imagens_filter_pedreiro">Pedreiro</string>
    <string name="imagens_filter_ladrilheiro">Ladrilheiro</string>
    <string name="imagens_filter_hidraulica">Hidráulica</string>
    <string name="imagens_filter_eletrica">Elétrica</string>
    <string name="imagens_filter_outro">Outro</string>
    <string name="imagens_card_title">Nova Imagem</string>
    <string name="imagens_form_name_hint">Nome da imagem</string>
    <string name="imagens_form_desc_hint">Descrição (opcional)</string>
    <string name="imagens_form_date_hint">Data</string>
    <string name="imagens_form_type_title">Tipo</string>
    <string name="export_summary_title">Exportar Resumo</string>
    <string name="home_btn_level_meter">Nível de Laser</string>
</resources>